force-app/main/default/objects/Opportunity/fields/Manager_Outbound_Check_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Manager_Outbound_Check_Sheet__c</fullName>
    <formula>Manager_Outbound_Check_Sheet_Score__c /54</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Outbound Check Sheet %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>