force-app/main/default/objects/Opportunity/fields/Manager_Outbound_Check_Sheet_Score__c.field-meta.xml
<CustomField>
    <fullName>Manager_Outbound_Check_Sheet_Score__c</fullName>
    <label>Manager Outbound Check Sheet Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>