force-app/main/default/objects/Opportunity/fields/Manager_Outbound_Pitch_Check_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Manager_Outbound_Pitch_Check_Sheet__c</fullName>
    <label>Manager Outbound Pitch Check Sheet</label>
    <type>Url</type>
</CustomField>