force-app/main/default/objects/Opportunity/fields/Manager_Outbound_Sheet_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Manager_Outbound_Sheet_Completed_Date__c</fullName>
    <label>Manager Outbound Sheet Completed Date</label>
    <type>Date</type>
</CustomField>