force-app/main/default/objects/Opportunity/fields/Manager_Sheet_Completed__c.field-meta.xml
<CustomField>
    <fullName>Manager_Sheet_Completed__c</fullName>
    <formula>IF( Manager_Outbound_Check_Sheet_Score__c &gt;0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Sheet Completed</label>
    <type>Checkbox</type>
</CustomField>