force-app/main/default/objects/Opportunity/fields/Manager_Top_5__c.field-meta.xml
<CustomField>
    <fullName>Manager_Top_5__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opportunities identified to close current month</description>
    <label>Manager Top 5</label>
    <type>Checkbox</type>
</CustomField>