force-app/main/default/objects/Opportunity/fields/Market_Closed__c.field-meta.xml
<CustomField>
    <fullName>Market_Closed__c</fullName>
    <formula>if( Number_of_Available_Programs__c &lt;=0,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Market Closed?</label>
    <type>Checkbox</type>
</CustomField>