force-app/main/default/objects/Opportunity/fields/Maryville_Rep__c.field-meta.xml
<CustomField>
    <fullName>Maryville_Rep__c</fullName>
    <formula>Contact__r.UFA_7__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maryville Rep</label>
    <type>Text</type>
</CustomField>