force-app/main/default/objects/Opportunity/fields/Media_Buy_Amount__c.field-meta.xml
<CustomField>
    <fullName>Media_Buy_Amount__c</fullName>
    <label>Media Buy Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>