force-app/main/default/objects/Opportunity/fields/Meeting_Reminder_and_Pump_Up_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Reminder_and_Pump_Up_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This Email should be sent the day prior to the meeting.</inlineHelpText>
    <label>Meeting Reminder and Pump Up Email Sent</label>
    <type>Checkbox</type>
</CustomField>