force-app/main/default/objects/Opportunity/fields/Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Status__c</fullName>
    <label>Appointment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Active Existing Account</fullName>
            </value>
            <value>
                <fullName>Won - Closed Business</fullName>
            </value>
            <value>
                <fullName>Still Working - Pitching</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>No Interest</fullName>
            </value>
            <value>
                <fullName>Client Reschedule</fullName>
            </value>
            <value>
                <fullName>Abstrakt Reschedule</fullName>
            </value>
            <value>
                <fullName>Proposal to Lost</fullName>
            </value>
            <value>
                <fullName>Client No-Show</fullName>
            </value>
            <value>
                <fullName>Prospect No-Show</fullName>
            </value>
            <value>
                <fullName>Delayed - Still Working</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Discovery-Still Working</fullName>
            </value>
            <value>
                <fullName>Need to Reschedule-Meeting did not take place</fullName>
            </value>
            <value>
                <fullName>Proposal Delivered</fullName>
            </value>
            <value>
                <fullName>Verbal Commitment</fullName>
            </value>
            <value>
                <fullName>Nurture-No Interest</fullName>
            </value>
            <value>
                <fullName>Nurture-Prospect Not Responding</fullName>
            </value>
            <value>
                <fullName>Nurture-Timing/Delayed</fullName>
            </value>
            <value>
                <fullName>Nurture-Proposal Not Signed</fullName>
            </value>
            <value>
                <fullName>No Longer Pursuing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>