force-app/main/default/objects/Opportunity/fields/Metro_Area__c.field-meta.xml
<CustomField>
    <fullName>Metro_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Metro Area Look up</description>
    <inlineHelpText>What is the Metro Area the prospect in interested in?</inlineHelpText>
    <label>Metro Area</label>
    <referenceTo>Metro_Area__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>