force-app/main/default/objects/Opportunity/fields/Metro_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>Metro_Area_Name__c</fullName>
    <description>used in Pandadoc templates</description>
    <formula>Metro_Area__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Metro Area Name</label>
    <type>Text</type>
</CustomField>