force-app/main/default/objects/Opportunity/fields/Minimum_Number_of_Appts__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Number_of_Appts__c</fullName>
    <description>This gets populated on the proposal from Docusign.</description>
    <inlineHelpText>This gets populated on the proposal from Docusign.</inlineHelpText>
    <label>Minimum Number of Appts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>