force-app/main/default/objects/Opportunity/fields/Missed_Follow_Up_Date__c.field-meta.xml
<CustomField>
    <fullName>Missed_Follow_Up_Date__c</fullName>
    <formula>IF( Follow_up_Date__c &lt;TODAY(),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Missed Follow Up Date</label>
    <type>Checkbox</type>
</CustomField>