force-app/main/default/objects/Opportunity/fields/Monthly_Sales_Goal_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sales_Goal_Inbound__c</fullName>
    <formula>CASE( MONTH( Contract_Execution_Date__c ) ,
1,14881.28,
2,14959.24,
3,15035.26,
4,20109.38,
5,20281.65,
6,20449.6,
7,25613.36,
8,25873.03,
9,26126.2,
10,26373.05,
11,26613.72,
12,26848.38,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Sales Goal Inbound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>