force-app/main/default/objects/Opportunity/fields/Monthly_Sales_Goal_Outbound_PSM__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Sales_Goal_Outbound_PSM__c</fullName>
    <formula>CASE( MONTH( Contract_Execution_Date__c ) ,
1,33560.05,
2,35321.05,
3,37038.02,
4,38712.07,
5,40844.27,
6,42923.16,
7,44950.08,
8,46926.33,
9,48853.17,
10,50731.84,
11,52563.55,
12,54349.46,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Sales Goal Outbound</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>