force-app/main/default/objects/Opportunity/fields/Most_Recent_Note__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Note__c</fullName>
    <label>Most Recent Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>