force-app/main/default/objects/Opportunity/fields/Most_Recent_Pitch_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Pitch_Date__c</fullName>
    <description>Used to track the most recent pitch scheduled by sales rep for this opportunity. Helps with tracking sales cycle.</description>
    <label>Most Recent Pitch Date</label>
    <type>Date</type>
</CustomField>