force-app/main/default/objects/Opportunity/fields/Most_Recent_Pitch_Result__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Pitch_Result__c</fullName>
    <label>Most Recent Pitch Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed Closed Market</fullName>
            </value>
            <value>
                <fullName>Completed Competitor</fullName>
            </value>
            <value>
                <fullName>Completed Don&apos;t Want to Grow</fullName>
            </value>
            <value>
                <fullName>Completed Engaged</fullName>
            </value>
            <value>
                <fullName>Completed Lost</fullName>
            </value>
            <value>
                <fullName>Completed No Budget</fullName>
            </value>
            <value>
                <fullName>Completed No Interest</fullName>
            </value>
            <value>
                <fullName>Completed Not a Fit</fullName>
            </value>
            <value>
                <fullName>Completed Not KDM</fullName>
            </value>
            <value>
                <fullName>Completed Nurture</fullName>
            </value>
            <value>
                <fullName>Completed Other</fullName>
            </value>
            <value>
                <fullName>Completed Proposal</fullName>
            </value>
            <value>
                <fullName>Completed Scheduled Next</fullName>
            </value>
            <value>
                <fullName>Completed Territory Closed</fullName>
            </value>
            <value>
                <fullName>Completed Too Expensive</fullName>
            </value>
            <value>
                <fullName>Completed Too Much Work</fullName>
            </value>
            <value>
                <fullName>Completed Waiting List</fullName>
            </value>
            <value>
                <fullName>Contacted Not Pitched</fullName>
            </value>
            <value>
                <fullName>Dead Lead</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Territory Closed</fullName>
            </value>
            <value>
                <fullName>Canceled - Need to Reschedule</fullName>
                <isActive>false</isActive>
                <label>Canceled - Need to Reschedule</label>
            </value>
            <value>
                <fullName>Completed Business Development</fullName>
                <isActive>false</isActive>
                <label>Completed Business Development</label>
            </value>
            <value>
                <fullName>Completed Delayed</fullName>
                <isActive>false</isActive>
                <label>Completed Delayed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>