force-app/main/default/objects/Opportunity/fields/Not_Qualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified_Reason__c</fullName>
    <description>Why a company is not qualified to pitch.</description>
    <label>Not Qualified Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Can&apos;t Afford Program</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Have a Website</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Meet # Techs/Employees</fullName>
            </value>
            <value>
                <fullName>Doesn&apos;t Meet Revenue Qualifier</fullName>
            </value>
            <value>
                <fullName>Have No Desire to Grow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>