force-app/main/default/objects/Opportunity/fields/Notify_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Notify_Rep_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Rep Email</label>
    <type>Checkbox</type>
</CustomField>