force-app/main/default/objects/Opportunity/fields/Notify_Sales_Reps__c.field-meta.xml
<CustomField>
    <fullName>Notify_Sales_Reps__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify Sales Reps</label>
    <type>Checkbox</type>
</CustomField>