force-app/main/default/objects/Opportunity/fields/Number_of_Calls_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Calls_Purchased__c</fullName>
    <inlineHelpText>This is the number of calls the dealer purchased.</inlineHelpText>
    <label>Number of Calls Purchased</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>