force-app/main/default/objects/Opportunity/fields/Number_of_Completed_Pitches__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Pitches__c</fullName>
    <label>Number of Completed Pitches</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>