force-app/main/default/objects/Opportunity/fields/Number_of_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Pieces__c</fullName>
    <label>Number of Pieces</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>