force-app/main/default/objects/Opportunity/fields/Number_of_Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Years_in_Business__c</fullName>
    <description>How long has the prospect been in business. - For use in DocuSign</description>
    <inlineHelpText>How long has the prospect been in business. - For use in DocuSign</inlineHelpText>
    <label>Number of Years in Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 1 year</fullName>
            </value>
            <value>
                <fullName>1-3 years</fullName>
            </value>
            <value>
                <fullName>3-5 years</fullName>
            </value>
            <value>
                <fullName>5-10 years</fullName>
            </value>
            <value>
                <fullName>Over 10 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>