force-app/main/default/objects/Opportunity/fields/of_Commercial__c.field-meta.xml
<CustomField>
    <fullName>of_Commercial__c</fullName>
    <label>% of Commercial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>