force-app/main/default/objects/Opportunity/fields/of_Techs__c.field-meta.xml
<CustomField>
    <fullName>of_Techs__c</fullName>
    <label># of Techs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>