force-app/main/default/objects/Opportunity/fields/Offer_Made__c.field-meta.xml
<CustomField>
    <fullName>Offer_Made__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tracks if a client has offered the talent solutions job applicant an offer.</description>
    <label>Offer Made</label>
    <type>Checkbox</type>
</CustomField>