force-app/main/default/objects/Opportunity/fields/Offer_Made_Date__c.field-meta.xml
<CustomField>
    <fullName>Offer_Made_Date__c</fullName>
    <label>Offer Made Date</label>
    <type>Date</type>
</CustomField>