force-app/main/default/objects/Opportunity/fields/Opportunity_Assigned_to_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Assigned_to_Email_2__c</fullName>
    <description>Used by Clients in the lightning portals</description>
    <inlineHelpText>If you would like additional internal sales representative to receive follow up reminders, add their email in this field.</inlineHelpText>
    <label>Opportunity Assigned to Email #2</label>
    <type>Email</type>
</CustomField>