force-app/main/default/objects/Opportunity/fields/Opportunity_Assigned_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Assigned_to_Email__c</fullName>
    <inlineHelpText>If you would like your internal sales representative to receive follow up reminders, add their email in this field.</inlineHelpText>
    <label>Opportunity Assigned to Email</label>
    <type>Email</type>
</CustomField>