force-app/main/default/objects/Opportunity/fields/Opportunity_Generated_By__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Generated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Generated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>