force-app/main/default/objects/Opportunity/fields/Opportunity_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Outcome__c</fullName>
    <label>Opportunity Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abstrakt Competitor</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Additional Authority</fullName>
            </value>
            <value>
                <fullName>B to C</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Check Budget</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Completed - No Interest</fullName>
            </value>
            <value>
                <fullName>Ghost</fullName>
            </value>
            <value>
                <fullName>Internal Competition</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Market Closed</fullName>
            </value>
            <value>
                <fullName>Market Research</fullName>
            </value>
            <value>
                <fullName>No ROI</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Not a Fit (B to C)</fullName>
            </value>
            <value>
                <fullName>Not in Budget</fullName>
            </value>
            <value>
                <fullName>Not KDM</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Proposal – Ghost</fullName>
            </value>
            <value>
                <fullName>References</fullName>
            </value>
            <value>
                <fullName>Think About It</fullName>
            </value>
            <value>
                <fullName>Too Expensive</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
                <isActive>false</isActive>
                <label>Not Interested</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>