force-app/main/default/objects/Opportunity/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not a Fit</fullName>
            </value>
            <value>
                <fullName>Lost (Nurture)</fullName>
            </value>
            <value>
                <fullName>Next Step</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>