force-app/main/default/objects/Opportunity/fields/Outbound_Amount__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Amount__c</fullName>
    <label>Outbound Amount</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Product_Type__c</field>
        <operation>contains</operation>
        <value>Outbound</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>