force-app/main/default/objects/Opportunity/fields/Outbound_Check_Sheet_Completed__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Check_Sheet_Completed__c</fullName>
    <formula>IF(Outbound_Pitch_Check_Sheet_Score__c &gt;0,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Sheet Completed</label>
    <type>Checkbox</type>
</CustomField>