force-app/main/default/objects/Opportunity/fields/Outbound_Check_Sheet_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Check_Sheet_Completed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outbound Check Sheet Completed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>