force-app/main/default/objects/Opportunity/fields/Outbound_Check_Sheet_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Check_Sheet_Completed_Date__c</fullName>
    <label>Outbound Check Sheet Completed Date</label>
    <type>Date</type>
</CustomField>