force-app/main/default/objects/Opportunity/fields/Outbound_Check_Sheet_Variance_Score__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Check_Sheet_Variance_Score__c</fullName>
    <formula>Manager_Outbound_Check_Sheet__c -  Outbound_Pitch_Check_Sheet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outbound Check Sheet Variance Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>