force-app/main/default/objects/Opportunity/fields/Outbound_Pitch_Check_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Pitch_Check_Sheet__c</fullName>
    <formula>IF(Outbound_Pitch_Check_Sheet_Score__c&gt;0, Outbound_Pitch_Check_Sheet_Score__c/54,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outbound Pitch Check Sheet %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>