force-app/main/default/objects/Opportunity/fields/Outbound_Pitch_Check_Sheet_Score__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Pitch_Check_Sheet_Score__c</fullName>
    <label>Outbound Pitch Check Sheet Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>