force-app/main/default/objects/Opportunity/fields/Outbound_Pitch_Check_Sheet_URL__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Pitch_Check_Sheet_URL__c</fullName>
    <label>Outbound Pitch Check Sheet URL</label>
    <type>Url</type>
</CustomField>