force-app/main/default/objects/Opportunity/fields/Over_30_Days_Without_Activity__c.field-meta.xml
<CustomField>
    <fullName>Over_30_Days_Without_Activity__c</fullName>
    <formula>IF( TODAY() - LastActivityDate &gt; 30,TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Over 30 Days Without Activity</label>
    <type>Checkbox</type>
</CustomField>