force-app/main/default/objects/Opportunity/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>What is the clients problem? - 10%</inlineHelpText>
    <label>Problem</label>
    <type>Checkbox</type>
</CustomField>