force-app/main/default/objects/Opportunity/fields/Pain_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pain_Notes__c</fullName>
    <label>Problem Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>