force-app/main/default/objects/Opportunity/fields/PAM_Email__c.field-meta.xml
<CustomField>
    <fullName>PAM_Email__c</fullName>
    <description>This field is used to notify the PAM when a client updates an opportunity.</description>
    <label>PAM Email</label>
    <type>Email</type>
</CustomField>