force-app/main/default/objects/Opportunity/fields/Partnership_Program__c.field-meta.xml
<CustomField>
    <fullName>Partnership_Program__c</fullName>
    <description>Corporate Partnership Programs</description>
    <label>Partnership Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partnership_Programs</valueSetName>
    </valueSet>
</CustomField>