force-app/main/default/objects/Opportunity/fields/Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Phone_2__c</fullName>
    <label>Mobile Phone</label>
    <type>Phone</type>
</CustomField>