force-app/main/default/objects/Opportunity/fields/Pitch_1_Count__c.field-meta.xml
<CustomField>
    <fullName>Pitch_1_Count__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Pitch_1_Result__c, &quot;&quot;)), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pitch #1 Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>