force-app/main/default/objects/Opportunity/fields/Pitch_1_Result__c.field-meta.xml
<CustomField>
    <fullName>Pitch_1_Result__c</fullName>
    <label>Pitch #1 Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Completed Closed Market</fullName>
            </value>
            <value>
                <fullName>Completed Competitor</fullName>
            </value>
            <value>
                <fullName>Completed Don&apos;t Want to Grow</fullName>
            </value>
            <value>
                <fullName>Completed Engaged</fullName>
            </value>
            <value>
                <fullName>Completed Lost</fullName>
            </value>
            <value>
                <fullName>Completed No Budget</fullName>
            </value>
            <value>
                <fullName>Completed No Interest</fullName>
            </value>
            <value>
                <fullName>Completed Not a Fit</fullName>
            </value>
            <value>
                <fullName>Completed Not KDM</fullName>
            </value>
            <value>
                <fullName>Completed Nurture</fullName>
            </value>
            <value>
                <fullName>Completed Proposal</fullName>
            </value>
            <value>
                <fullName>Completed Scheduled Next</fullName>
            </value>
            <value>
                <fullName>Completed Too Expensive</fullName>
            </value>
            <value>
                <fullName>Completed Too Much Work</fullName>
            </value>
            <value>
                <fullName>Completed Waiting List</fullName>
            </value>
            <value>
                <fullName>Contacted Not Pitched</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Rescheduled</fullName>
            </value>
            <value>
                <fullName>Territory Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>